# falcon-blockchain

./: .flaskenv  .gitignore  LICENSE  README.md  blockchain.py  gs_norms.xlsx  keys.py  node.py  pyproject.toml  requirements.txt  test_blockchain.py  utxo.py
falcon/: LICENSE  common.py  encoding.py  falcon.py  ffsampling.py  fft.py  makefile  ntrugen.py  ntt.py  profile_action.py  pyproject.toml  samplerz.py  test.py
falcon/.github/workflows/: codeql-analysis.yml
falcon/scripts/: generate_constants.sage  parameters.py  samplerz_KAT1024.py
falcon_mcmc/: README.md  falcon.py  falcon_original.py  ffsampling.py  fft.py  fft_constants.py  ntrugen.py  ntt.py  ntt_constants.py  profile_action.cprof  profile_action.py  random_stuff.py  rng.py  samplerz.py  script.py  test.py
falcon_mcmc/scripts/: README.md  samplerz_KAT512.py  sign_KAT.py
tests/: test_blockchain.py
