[tool.poetry]
name = "falcon.py"
version = "0.1.0"
description = ""
authors = ["sammyg <samuelgoh1525@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.20.3"
pycryptodome = "^3.10.1"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
